--- a/app/assets/stylesheets/empresas.css.scss
+++ b/app/assets/stylesheets/empresas.css.scss
@@ -11,3 +11,12 @@
 	width: 200px;
 	height: 300px;
 }
+
+
+@media only screen and (max-width: 640px) {
+	.hidden-movil-medium-empresa	{ display:none; visibility:hidden; }
+}
+
+@media only screen and (max-width: 490px) {
+	.hidden-movil-small-empresa	{ display:none; visibility:hidden; }
+}
