--- a/app/assets/stylesheets/interests.css.scss
+++ b/app/assets/stylesheets/interests.css.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the interests controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@media only screen and (max-width: 471px) {
+	.hidden-movil-small-inte	{ display:none; visibility:hidden; }
+}
