--- a/app/assets/stylesheets/mettings.css.scss
+++ b/app/assets/stylesheets/mettings.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the mettings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@media only screen and (max-width: 670px) {
+	.hidden-movil-medium-meet	{ display:none; visibility:hidden; }
+}
+
+@media only screen and (max-width: 445px) {
+	.hidden-movil-small-meet	{ display:none; visibility:hidden; }
+}
