--- a/app/assets/stylesheets/stakeholders.css.scss
+++ b/app/assets/stylesheets/stakeholders.css.scss
@@ -42,3 +42,16 @@
 	font-size: 50pt !important;
 	font-weight: bold !important;
 }
+
+
+@media only screen and (min-width: 680px) {
+	.hidden-large	{ display:none; visibility:hidden; }
+}
+
+@media only screen and (max-width: 680px) {
+	.hidden-movil-medium	{ display:none; visibility:hidden; }
+}
+
+@media only screen and (max-width: 490px) {
+	.hidden-movil-small	{ display:none; visibility:hidden; }
+}
