--- a/app/views/compromises/index.html.erb
+++ b/app/views/compromises/index.html.erb
@@ -21,10 +21,10 @@
       <thead class="head-tabla">
         <tr>
           <th>Fecha inicial</th>
-          <th>Correo</th>
-          <th>Fecha limite</th>
-          <th>Compromisos</th>
-          <th>Stakeholder</th>
+          <th class="hidden-movil-medium-comp">Correo</th>
+          <th >Fecha limite</th>
+          <th class="hidden-movil-small-comp">Compromisos</th>
+          <th class="hidden-movil-small-comp">Stakeholder</th>
           <th>PDF</th>
           <th>EDIT</th>
           <th>Elimniar</th>
@@ -35,10 +35,10 @@
         <% @compromises.each do |compromise| %>
           <tr>
             <td><%= compromise.fecha_inicial %></td>
-            <td><%= compromise.correo %></td>
+            <td class="hidden-movil-medium-comp"><%= compromise.correo %></td>
             <td><%= compromise.fecha_limite %></td>
-            <td><%= compromise.compromisos %></td>
-            <td><%= compromise.stakeholder.nombre %></td>
+            <td class="hidden-movil-small-comp"><%= compromise.compromisos %></td>
+            <td class="hidden-movil-small-comp"><%= compromise.stakeholder.nombre %></td>
             <td><%= link_to (image_tag 'imprimir_pequeno.png'), '/compromises/'+compromise.id.to_s+'.pdf', target: '_blank' %></td>
             <td><%= link_to (image_tag 'editar_1.png'), edit_compromise_path(compromise) %></td>
             <td><%= link_to (image_tag 'eliminar_1.png'), compromise, method: :delete, data: { confirm: 'Are you sure?' } %></td>
