--- a/app/views/layouts/_menu_superior.html.erb
+++ b/app/views/layouts/_menu_superior.html.erb
@@ -1,41 +1,43 @@
-<nav class="top-bar" data-topbar>
-  <ul class="title-area">
-    <li class="name">
-      <h1><a href="#"><%= image_tag 'logo_stakeholders.png' %></a></h1>
-    </li>
-     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="#"></a></li>
-  </ul>
 
-  <section class="top-bar-section">
-    <!-- Right Nav Section -->
-    <ul class="right">
-      <li >
-        <a href="#">
-          ¿QUIÉNES SOMOS?
-        </a>
+  <nav class="top-bar" data-topbar>
+    <ul class="title-area">
+      <li class="name">
+        <h1><a id="linkhome"><%= image_tag 'logo_stakeholders.png' %></a></h1>
       </li>
-       <li >
-        <a href="#">
-          NUESTROS SERVICIOS
-        </a>
-      </li>
-       <li >
-        <a href="#">
-          NUESTRA EXPERIENCIA
-        </a>
-      </li>
-       <li >
-        <a href="#">
-          EQUIPO
-        </a>
-      </li>
-      <li >
-        <a href="#">
-          GERENTE
-        </a>
-      </li>
+       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+      <li class="toggle-topbar menu-icon"><a href="#"></a></li>
     </ul>
 
-  </section>
-</nav>
+    <section class="top-bar-section">
+      <!-- Right Nav Section -->
+      <ul class="right">
+        <li >
+          <a id="linkquienessomos">
+            ¿QUIÉNES SOMOS?
+          </a>
+        </li>
+         <li >
+          <a id="linkservicios">
+            NUESTROS SERVICIOS
+          </a>
+        </li>
+         <li >
+          <a id="linkexperiencia">
+            NUESTRA EXPERIENCIA
+          </a>
+        </li>
+         <li >
+          <a id="linkequipo">
+            EQUIPO
+          </a>
+        </li>
+        <li >
+          <a id="linkgerente">
+            GERENTE
+          </a>
+        </li>
+      </ul>
+
+    </section>
+  </nav>
+</div>
