--- a/app/views/stakeholders/_identificacion.html.erb
+++ b/app/views/stakeholders/_identificacion.html.erb
@@ -15,7 +15,8 @@
     <div class="large-4 columns">
         <% if @stakeholder.imagen_url %>
           <div class="roundLabel">
-            <%= image_tag @stakeholder.imagen_url, class: 'imagen' %>  
+            <%= image_tag @stakeholder.imagen_url, class: 'imagen' %> 
+            <%= f.file_field :imagen %> 
           </div>
         <% else %>
           <div class="roundLabel">
