--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -57,37 +57,102 @@
 			%br
 			%br
 			%p.blanco
-				Fortalecimiento de 
-				políticas públicas: 
-				municipales, 
-				departamentales y 
-				nacionales
+				%b
+					Fortalecimiento de 
+					políticas públicas: 
+					municipales, 
+					departamentales y 
+					nacionales
 		.large-3.column.text-center
 			=  image_tag 'icono_2_nuestros-servicios.png'
 			%br
 			%br
 			%p.blanco
-				Priorización y 
-				focalización en 
-				inversión y 
-				responsabilidad 
-				social		
+				%b
+					Priorización y 
+					focalización en 
+					inversión y 
+					responsabilidad 
+					social		
 		.large-3.column.text-center
 			=  image_tag 'icono_3_nuestros-servicios.png'
 			%br
 			%br
 			%p.blanco
-				Gestión, 
-				identificación 
-				y relacionamiento 
+				%b
+					Gestión, 
+					identificación 
+					y relacionamiento 
 		.large-3.column.text-center
 			=  image_tag 'icono_4_nuestros-servicios.png'
 			%br
 			%br
 			%p.blanco#experiencia
-				Implementación
-				del stakeholder 
-				management system (sms)
+				%b
+					Implementación
+					del stakeholder 
+					management system (sms)
+
+	-# .row
+	-# 	.large-3.column.text-center
+	-# 		%p.blanco.small
+	-# 			Formulación, implementación, seguimiento y evaluación de poĺíticas públicas a nivel Nacional y Departamental
+	-# 			%br
+	-# 			%br
+	-# 			Diseño de estrategias participativas a nivel territorial y nacional
+	-# 			%br
+	-# 			%br
+	-# 			Formulación de proyectos de inversión
+	-# 	.large-3.column.text-center
+	-# 		%p.blanco.small
+	-# 			Definición de estrategias y enlace de programas, planes y proyectos para generar crecimiento económico, beneficios sociales y prosperidad social                 
+	-# 			%br
+	-# 			%br
+	-# 			Formulación, implementación, seguimiento y evaluación de Programas en Beneficio de las Comunidades
+	-# 			%br
+	-# 			%br
+	-# 			Articulación de inversiones sociales privadas y públicas
+	-# 			%br
+	-# 			%br
+	-# 			Caracterización de beneficios económicos de la inversión
+	-# 	.large-3.column.text-center
+	-# 		%p.blanco.small
+	-# 			Definición de estrategias y relacionamiento con los stakeholders relevantes.
+	-# 			%br
+	-# 			%br
+	-# 			Seguimiento Legislativo y normativo
+	-# 	.large-3.column.text-center
+	-# 		%p.blanco.small
+	-# 			El SMS es una Plataforma, cuyo propósito es el de permitir a sus usuarios documentar, de forma
+	-# 			sistematizada la información sobre sus Stakeholders y el entorno donde estos se desenvuelven. 
+	-# 			%br
+	-# 			Cuenta con acceso a través de internet, lo que le permite al usuario acceder desde cualquier parte y en cualquier momento. 
+	-# 			%br
+	-# 			El sistema de seguridad SSL (Secure Sockets Layer) garantiza la confidencialidad y seguridad 
+	-# 			de la información. Cuenta con procesos de actualización automáticos, generación de reportes 8/5, desarrollo en Ruby On Rails versión 4.1 y base de datos SQlite version 3.8.2.
+	-# 			%br
+	-# 			%br
+	-# 			El Stakeholder Management System le permitirá:
+	-# 			%br
+	-# 			Sistematizar la información.
+	-# 			%br
+	-# 			%br
+	-# 			Gestionar con mayor celeridad los riesgos potenciales.
+	-# 			%br
+	-# 			%br
+	-# 			Documentar toda la información referente a sus Stakeholders.
+	-# 			%br
+	-# 			%br
+	-# 			Revisar en tiempo real la información.
+	-# 			%br
+	-# 			%br
+	-# 			Documentar las reuniones y los compromisos adquiridos con sus Stakeholders.
+	-# 			%br
+	-# 			%br
+	-# 			Generar informes que podrá imprimir o descargar en su computador, tablet o celular
+	-# 			%br
+	-# 			%br
+	-# 			Personalizar la plataforma de acuerdo a sus necesidades
 .contenedor
 	.row
 		.large-12.column
@@ -127,9 +192,12 @@
 
 
 
-.large-6.column.gris-claro-bg.contenedor-especial#equipo
+-# .large-6.column.gris-claro-bg.contenedor-especial#equipo
+-# 	.row
+-# 		.large-6.hide-for-small-only.column
+
+.gris-oscuro-bg.contenedor-especial#equipo
 	.row
-		.large-6.hide-for-small-only.column
 		.large-6.small-12.column
 			%p.text-justify.gris.texto-quienes.text-equipo
 				La firma cuenta con un grupo de consultores 
@@ -141,12 +209,9 @@
 				otras. Nuestra experiencia garantiza el éxito en 
 				las consultorías que realizamos.
 
-.large-6.column.gris-oscuro-bg.contenedor-especial
-	.row
 		.large-6.small-12.column
 			%h2.verde.text-center.bold.title-equipo
 				EQUIPO
-		.large-6.hide-for-small-only.column
 
 .servicios.clearfix
 	.row#gerente
